Revision history for Games-Solitaire-Verify

        - Add support for flipped cards to ::Card .

0.1103  Thu 17 Jan 11:35:12 IST 2013
        - Update Build.PL (configure_requires + repository link).

0.1102  Mon 10 Sep 22:04:28 IDT 2012
        - Add lib/Games/Solitaire/Verify/App/CmdLine/Expand.pm to the
        distribution.
            - This caused script/expand-solitaire-multi-card-moves to
            fail.

0.1101  Fri  7 Sep 07:28:06 IDT 2012
        - Add strict, warnings and autodie to requires/build_requires.
            - See for example: http://www.cpantesters.org/cpan/report/52b7a6ba-f548-11e1-bdcc-373e3b6b8117

0.1100  Fri 31 Aug 22:35:18 IDT 2012
        - Add lib/Games/Solitaire/Verify/Solution/ExpandMultiCardMoves.pm
        for processing a solution and expanding multi-card (= column) moves
        into single-card moves, which are easier to validate by human players.
            - Now tested using t/08-expand-solution.t
            - Added script/expand-solitaire-multi-card-moves .

0.1001  Thu 23 Aug 11:12:25 IDT 2012
        - Add the color_for_suit method to ::Card .
        - Remove trailing space with t/style-trailing-space.t as a test.

0.1000  Tue Nov  8 20:07:13 IST 2011
        - Add the script/tag-release.pl to tag a release in Subversion.
        - Add script/bump-version-number.pl .
        - lib/Games/Solitaire/Verify/Card.pm :
            - Add the id() slot.
            - Add the data() slot.
        - lib/Games/Solitaire/Verify/State.pm :
            - Add the add_column method.
            - Add the set_foundations() method.
            - Add the set_freecells() method.
        - lib/Games/Solitaire/Verify/State.pm :
            - Fix cloning of states with a "custom" variant and with
            variant_params.

0.0901  Thu Jun  2 21:24:24 IDT 2011
        - Now importing Dumper from Data::Dumper properly.

0.09    Sat Jul 10 12:28:47 IDT 2010
        - Converted from Class-Accessor to Class-XSAccessor (with a function