@@ -11,6 +11,7 @@ lib/Games/Solitaire/Verify/Column.pm
 lib/Games/Solitaire/Verify/Exception.pm
 lib/Games/Solitaire/Verify/Foundations.pm
 lib/Games/Solitaire/Verify/Freecells.pm
+lib/Games/Solitaire/Verify/KlondikeTalon.pm
 lib/Games/Solitaire/Verify/Move.pm
 lib/Games/Solitaire/Verify.pm
 lib/Games/Solitaire/Verify/Solution.pm
